@@ -1,4 +1,3 @@
-
 bin_PROGRAMS =  \
 	test-dshconfig
 
